[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.23"
chrono-tz = "0.8.1"
itertools = "0.9.0"
regex = "1.7.0"
# range-collections = "0.2.4"